--- a/.github/workflows/retention_period.yml
+++ b/.github/workflows/retention_period.yml
@@ -16,5 +16,5 @@ jobs:
         uses: Mattraks/delete-workflow-runs@main
         with:
           repository: ${{ github.repository }}
-          retain_days: 90
+          retain_days: ${{ github.event.inputs.days }}
           keep_minimum_runs: 5
