--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  label-sync:
+  label-sync-local:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,9 +20,7 @@ jobs:
           fetch-depth: 0
 
       - uses: micnncim/action-label-syncer@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           manifest: .github/labels.yml
-          repository: |
-              jfandy1982/vagrant-test-boxes
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          prune: false
