Add a new label 'test_label'

--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,3 +34,6 @@
 - name: javascript
   description: Pull requests that update Javascript code
   color: 168700
+- name: test_local
+  description: Does the local distribution work?
+  color: ffff00
