Add remote label sync as new job step

--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -24,3 +24,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           manifest: .github/labels.yml
+
+  label-sync-remote:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - uses: micnncim/action-label-syncer@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          manifest: .github/labels.yml
+          repository: |
+            jfandy1982/vagrant-test-boxes
+          token: ${{ secrets.PERSONAL_TOKEN }}
