Update secrets name

--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -48,4 +48,4 @@ jobs:
         with:
           manifest: .github/labels.yml
           repository: ${{ matrix.repo }}
-          token: ${{ secrets.PERSONAL_TOKEN }}
+          token: ${{ secrets.TEST_PAT }}
