Add repo 'test-connection' after Auth Change

--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -31,6 +31,7 @@ jobs:
 
       matrix:
         repo:
+          - jfandy1982/test-connection
           - jfandy1982/vagrant-test-boxes
           - jfandy1982/webstation
 
