--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -34,3 +34,18 @@
 - name: javascript
   description: Pull requests that update Javascript code
   color: 168700
+
+# Labels inspired by https://opensource.creativecommons.org/contributing-code/repo-labels/
+# Group: Priority
+- name: 'priority: critical'
+  description: Must be fixed ASAP
+  color: b60205
+- name: 'priority: high'
+  description: Stalls work on the project or its dependents
+  color: ff9f1c
+- name: 'priority: medium'
+  description: Not blocking but should be fixed soon
+  color: ffcc00
+- name: 'priority: low'
+  description: Low priority and doesn't need to be rushed
+  color: cfda2c
