--- a/.github/workflows/retention_period.yml
+++ b/.github/workflows/retention_period.yml
@@ -1,4 +1,4 @@
-name: Garbage Collection (Reusable)
+name: Garbage Collection
 
 on:
   workflow_dispatch:
@@ -13,8 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete outdated workflow runs
-        uses: Mattraks/delete-workflow-runs@main
+        uses: Mattraks/delete-workflow-runs@v2.0.1
         with:
+          token: ${{ github.token }}
           repository: ${{ github.repository }}
           retain_days: ${{ github.event.inputs.days }}
           keep_minimum_runs: 5
