--- a/.github/workflows/retention_period.yml
+++ b/.github/workflows/retention_period.yml
@@ -8,14 +8,22 @@ on:
         required: true
         default: '30'
 
+permissions:
+  actions: write
+
 jobs:
   del_runs:
     runs-on: ubuntu-latest
     steps:
-      - name: Delete outdated workflow runs
-        uses: Mattraks/delete-workflow-runs@v2.0.1
+      - name: 'Delete outdated workflow runs'
+        uses: Mattraks/delete-workflow-runs@v2
+
+        env:
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          RETAIN_DAYS: ${{ github.event.inputs.days }}
+
         with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: ${{ github.event.inputs.days }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ env.GITHUB_REPOSITORY }}
+          retain_days: ${{ env.RETAIN_DAYS }}
           keep_minimum_runs: 5
