--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -37,6 +37,7 @@ jobs:
           - jfandy1982/emby-data-check
           - jfandy1982/find-duplicates
           - jfandy1982/jfandy1982
+          - jfandy1982/postman-requests
           - jfandy1982/test-connection
           - jfandy1982/vagrant-test-boxes
           - jfandy1982/webstation
