--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -36,6 +36,7 @@ jobs:
           - jfandy1982/education
           - jfandy1982/emby-data-check
           - jfandy1982/find-duplicates
+          - jfandy1982/harznet
           - jfandy1982/jfandy1982
           - jfandy1982/pipeline-playground
           - jfandy1982/test-connection
