--- a/.github/workflows/label_sync.yml
+++ b/.github/workflows/label_sync.yml
@@ -31,6 +31,7 @@ jobs:
 
       matrix:
         repo:
+          - jfandy1982/action-nx-affected-projects-and-deps
           - jfandy1982/dotfiles
           - jfandy1982/dotfiles-private
           - jfandy1982/education
@@ -38,6 +39,7 @@ jobs:
           - jfandy1982/find-duplicates
           - jfandy1982/harznet
           - jfandy1982/jfandy1982
+          - jfandy1982/node-format-flux
           - jfandy1982/pipeline-playground
           - jfandy1982/test-connection
           - jfandy1982/vagrant-test-boxes
