chore: :pushpin: pin versions for GH action workflow files

--- a/.github/workflows/retention_period.yml
+++ b/.github/workflows/retention_period.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Delete outdated workflow runs'
-        uses: Mattraks/delete-workflow-runs@v2.0.6
+        uses: Mattraks/delete-workflow-runs@39f0bbed25d76b34de5594dceab824811479e5de #v2.0.6
 
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
